<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <!-- sistema-web-gpsti info -->
    <groupId>br.edu.unoesc</groupId>
    <artifactId>sistema-web-gpsti</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>
    <!-- sistema-web-gpsti info -->


    <!-- parent pom -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.8.RELEASE</version>
        <relativePath/>
    </parent>
    <!-- parent pom -->


    <!-- sub modules -->
    <modules>
        <module>config-server</module>
        <module>eureka-server</module>
        <module>zuul-server</module>
        <module>pessoa-service</module>
        <module>ui-service</module>
    </modules>
    <!-- sub modules -->

    <dependencyManagement>
        <dependencies>
            <dependency>
                <artifactId>config-server</artifactId>
                <groupId>br.edu.unoesc</groupId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <artifactId>eureka-server</artifactId>
                <groupId>br.edu.unoesc</groupId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <artifactId>pessoa-service</artifactId>
                <groupId>br.edu.unoesc</groupId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <artifactId>ui-service</artifactId>
                <groupId>br.edu.unoesc</groupId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <artifactId>zuul-server</artifactId>
                <groupId>br.edu.unoesc</groupId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- properties -->
    <properties>
        <java.version>12</java.version>
        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
    </properties>
    <!-- properties -->


    <!-- all modules dependencies -->
    <dependencies>

        <!-- default dependencies -->
        <!-- <dependency>
            <groupId>org.springframework.amqp</groupId>
            <artifactId>spring-rabbit</artifactId>
        </dependency> -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <!-- <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-zipkin</artifactId>
        </dependency> -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <!-- default dependencies -->

        <!-- runtime dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <!-- runtime dependencies -->

        <!-- tests dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- tests dependencies -->

    </dependencies>
    <!-- all modules dependencies -->


    <!-- maven build -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
			        <release>${java.version}</release>
			        <compilerArgs>--enable-preview</compilerArgs>
			    </configuration>
            </plugin>
        </plugins>
    </build>
    <!-- maven build -->

</project>
